# airmash-protocol-rs

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
.circleci/: config.yml
.github/workflows/: auto-dependabot.yml  build-project.yml
protocol/: Cargo.toml
protocol/src/: client.rs  error.rs  field.rs  impls.rs  lib.rs  macros.rs  server.rs
protocol/tests/: test1.rs
src/: client.rs  client_packet.rs  de.rs  deserialize.rs  detail.rs  error.rs  field.rs  field_tests.rs  impls.rs  lib.rs  macros.rs  packet.rs  packet_impls.rs  ser.rs  serde.rs  serialize.rs  server.rs  server_packet.rs  traits.rs  util.rs  visitor.rs
src/consts/: flags.rs
src/custom/: btr.rs  ctf.rs  mod.rs  utils.rs
src/datatypes/: flag.rs  flags.rs  keycode.rs  keystate.rs  level_ty.rs  mobtype.rs  mod.rs  planetype.rs  serverkeystate.rs  specs_impls.rs  status.rs  upgrades.rs
src/de/: deserialize.rs  mod.rs
src/enums/: command_reply_type.rs  despawn_mob_type.rs  error_type.rs  firewall_status.rs  firewall_update_type.rs  flag_code.rs  flag_update_type.rs  game_type.rs  key_code.rs  leave_horizon_type.rs  macros.rs  mob_type.rs  mod.rs  plane_type.rs  player_level_type.rs  player_status.rs  powerup_type.rs  server_custom_type.rs  server_message_type.rs  tests.rs  upgrade_type.rs
src/packets/: client.rs  debug.rs  mod.rs  serde.rs  server.rs
src/packets/client/: backup.rs  chat.rs  command.rs  empty.rs  horizon.rs  key.rs  localping.rs  login.rs  mod.rs  pong.rs  say.rs  team_chat.rs  votemute.rs  whisper.rs
src/packets/server/: chat_public.rs  chat_say.rs  chat_team.rs  chat_votemute_passed.rs  chat_whisper.rs  command_reply.rs  empty.rs  error.rs  event_boost.rs  event_bounce.rs  event_leave_horizon.rs  event_repel.rs  event_stealth.rs  game_firewall.rs  game_flag.rs  game_players_alive.rs  game_spectate.rs  login.rs  mob_despawn.rs  mob_despawn_coords.rs  mob_update.rs  mob_update_stationary.rs  mod.rs  ping.rs  ping_result.rs  player_fire.rs  (+16 more)
src/ser/: mod.rs  serialize.rs
src/types/: flag.rs  level.rs  mob.rs  mod.rs  player.rs  score.rs  server_key_state.rs  team.rs  units.rs  upgrades.rs  vector2.rs
src/v5/: client.rs  error.rs  macros.rs  mod.rs  protocol.rs  server.rs  tests.rs  types.rs
tests/: root.rs  serialize-deserialize-mobtype.rs  test1.rs
tests/client/: horizon.rs  login.rs  mod.rs
tests/datatypes/: flagcode.rs  mod.rs
(+5 files in other folders)
