[package]
name = "airmash-protocol"
version = "0.2.2"
authors = ["STEAMROLLER"]
readme = "README.md"
description = "Protocol library for airma.sh"
repository = "https://github.com/steamroller-airmash/airmash-protocol-rs"
keywords = ["protocol", "games"]
license = "Apache-2.0 OR MIT"

[badges]
circle-ci = { repository = "steamroller-airmash/airmash-protocol-rs" }
maintenance = { status = "experimental" }

[features]
default = ["custom_data"]
custom_data = ["serde", "serde_json"]

[dependencies]
lazy_static = "1.0"
fnv = "1.0"
dimensioned = "0.7"
specs-derive = "0.2"
derive_more = "0.12"

[dependencies.specs]
version = "0.12"
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true
