[package]
name = "airmash-protocol"
version = "0.4.0"
authors = ["STEAMROLLER"]
readme = "README.md"
description = "Protocol library for airma.sh"
repository = "https://github.com/steamroller-airmash/airmash-protocol-rs"
keywords = ["protocol", "games"]
license = "Apache-2.0 OR MIT"
edition = "2018"

[badges]
circle-ci = { repository = "steamroller-airmash/airmash-protocol-rs" }
maintenance = { status = "experimental" }

[features]
serde = [ "serde-feature-hack", "serde_json", "bstr/serde1" ]
default = [ ]

[dependencies]
bstr = "0.2.16"
smallvec = "1.6.1"
nalgebra = "0.27.1"
num-traits = "0.2"
derivative = "2.2"
approx = "0.5"

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.serde-feature-hack]
version = "0.2"
features = ["derive"]
optional = true
