[package]
name = "airmash-protocol"
version = "0.6.1"
authors = ["STEAMROLLER"]
readme = "README.md"
description = "Protocol library for airmash"
repository = "https://github.com/steamroller-airmash/airmash-protocol-rs"
keywords = ["protocol", "games"]
license = "Apache-2.0 OR MIT"
edition = "2018"

[features]
serde = [ "serde-feature-hack", "serde_json", "bstr/serde1" ]
default = [ ]

[dependencies]
bstr = { version = "0.2.16", default-features = false, features=["std"] }
mint = "0.5"

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.serde-feature-hack]
version = "0.2"
features = ["derive"]
optional = true

[dev-dependencies]
approx = "0.5"
